2001-09-11  James Henstridge  <james@daa.com.au>

	* gtk/__init__.py (create_pixmap): few fixups to get things to
	import correctly.

	* gtk/gtkmodule.c (init_gtk): there is no _pygdk_register_boxed().

	* gtk/libglade.override (init): same here.

	* gtk/gtk.override (init): same here.

	* gtk/gdk.override (init): use short class names here.

	* gtk/gtkmodule.c (init_gtk): initialise both the gtk._gtk and
	gtk.gdk modules.

	* gtk/gtk.defs: don't include gdk.defs

	* gtk/gtk.override: remove all GDK override wrappers.

	* gtk/gdk.override: new file taking the overrides for GDK
	functions.

	* codegen/codegen.py (write_source): register only the short name
	of the GObject, interface or boxed type.

2001-09-10  Johan Dahlin  <zilch.am@home.se>

	* autogen.sh: add check and usage for AUTOMAKE and ACLOCAL.

2001-09-06  James Henstridge  <james@daa.com.au>

	* gtk/GTK.py: fix up enums.

	* gobjectmodule.c (pyg_closure_marshal): if return_value is NULL,
	don't set it.
	(pyg_signal_class_closure_marshal): same here.

	* gtk/gtk.defs: various updates to make it compile.

	* gtk/gtk-types.c (pygdk_atom_str): fallback to returning the repr
	of the atom if we can't resolve its name, rather than returning
	NULL.  Patch from Skip.

	* gobjectmodule.c (pyg_value_from_pyobject): look at the
	fundamental type in this function so we can use a switch statement
	that catches the fundamental types easily, reducing the number of
	type checks.
	(pyg_value_as_pyobject): similar here.  Also handle boolean types
	using patch from Skip.

	* gtk/GDK.py: add extra constants from Skip.

2001-08-23  James Henstridge  <james@daa.com.au>

	* configure.in (build_libglade): add forth argument to
	PKG_CHECK_MODULES call so that configure doesn't die a horrible
	death when it can't find libglade.

2001-08-22  James Henstridge  <james@daa.com.au>

	* gtk/libglade.override: add signal connection function overrieds.

	* pygtk-2.0.pc.in: add a pkg-config data file that contains some